# qypi

./: .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.rst  TODO.md  pyproject.toml  qypi.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
qypi/: __init__.py  __main__.py  api.py  util.py
src/qypi/: __init__.py  __main__.py  api.py  util.py
test/: conftest.py  test_main.py
test/data/: foobar.json  has-prerel.json  nullfields.json  prerelease-only.json
