[aliases]
make=sdist bdist_wheel

[metadata]
name = qypi
version = attr:qypi.__version__
description = Query PyPI from the command line
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = qypi@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/qypi

keywords =
    pypi
    warehouse
    search
    packages
    pip

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution

project_urls =
    Source Code = https://github.com/jwodder/qypi
    Bug Tracker = https://github.com/jwodder/qypi/issues
    Say Thanks! = https://saythanks.io/to/jwodder

[options]
packages = find:
python_requires = ~=3.5
install_requires =
    click~=7.0
    packaging>=16
    requests==2.*

[options.entry_points]
console_scripts =
    qypi = qypi.__main__:qypi
