[metadata]
name = qypi
version = attr:qypi.__version__
description = Query PyPI from the command line
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = qypi@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/qypi

keywords =
    pypi
    warehouse
    search
    packages
    pip

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution

project_urls =
    Source Code = https://github.com/jwodder/qypi
    Bug Tracker = https://github.com/jwodder/qypi/issues

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
install_requires =
    click     >= 8.0
    packaging >= 16
    pydantic  ~= 1.9
    requests  ~= 2.20

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    qypi = qypi.__main__:qypi
