[metadata]
name = qypi
version = attr:qypi.__version__
description = Query PyPI from the command line
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = qypi@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/qypi

keywords =
    pypi
    warehouse
    search
    packages
    pip

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/qypi
    Bug Tracker = https://github.com/jwodder/qypi/issues

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
install_requires =
    click     >= 8.0
    packaging >= 16
    pydantic  ~= 2.0
    requests  ~= 2.20

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    qypi = qypi.__main__:qypi

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
plugins = pydantic.mypy

[pydantic-mypy]
init_forbid_extra = True
warn_untypes_fields = True
